fix: add cards wrapping in footer

--- a/christmas-shop/styles/footer.css
+++ b/christmas-shop/styles/footer.css
@@ -15,6 +15,7 @@ footer {
 
 .footer__container__contacts {
   display: flex;
+  flex-wrap: wrap;
   gap: 12px;
 }
 
